--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 <body>
   <table>
     <tr>
-      <th>Name</th>
-      <th>Phone Number</th>
-      <th>Bringing</th>
+      <th>City</th>
+      <th>State</th>
+      <th>2017 estimate</th>
     </tr>
     <tr>
-      <td>Daniel</td>
-      <td>718-555-1212</td>
-      <td>Guacamole</td>
+      <td>New York</td>
+      <td>New York</td>
+      <td>8,622,698</td>
     </tr>
     <tr>
-      <td>Rachel</td>
-      <td>718-555-1212</td>
-      <td>Chips</td>
+      <td>Los Angeles</td>
+      <td>California</td>
+      <td>3,999,759</td>
     </tr>
     <tr>
       <td>Terrance</td>
